<?xml version="1.0"?>
<package format="2">
  <name>snapstack_msgs</name>
  <version>0.0.0</version>
  <description>Message definitions for ACL snap stack</description>

  <maintainer email="btlopez@mit.edu">Brett Lopez</maintainer>
  <maintainer email="plusk@mit.edu">Parker Lusk</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>message_runtime</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>actionlib_msgs</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
